--- a/nifi-OpenCV-processors/pom.xml
+++ b/nifi-OpenCV-processors/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>com.simonellistonball.nifi</groupId>
 		<artifactId>OpenCV</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>0.0.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>nifi-OpenCV-processors</artifactId>
@@ -63,10 +63,10 @@
 
 		<!-- Open CV -->
 		<dependency>
-			<groupId>nu.pattern</groupId>
-			<artifactId>opencv</artifactId>
-			<version>2.4.9-7</version>
-		</dependency>
+      <groupId>org.openpnp</groupId>
+      <artifactId>opencv</artifactId>
+      <version>3.2.0-1</version>
+    </dependency>
 	</dependencies>
 
 	<build>
